--- a/Data by Asset Class.ipynb
+++ b/Data by Asset Class.ipynb
@@ -555,7 +555,10 @@
      "output_type": "stream",
      "text": [
       "ERROR:ib_insync.wrapper:Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "ERROR:ib_insync.wrapper:Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n"
+      "ERROR:ib_insync.wrapper:Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n",
+      "ERROR:ib_insync.wrapper:Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
+      "ERROR:ib_insync.wrapper:Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n",
+      "ERROR:ib_insync.client:Peer closed connection\n"
      ]
     }
    ],
