--- a/bar_data.ipynb
+++ b/bar_data.ipynb
@@ -78,7 +78,20 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:ib_insync.wrapper:Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
+      "ERROR:ib_insync.wrapper:Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
+      "ERROR:ib_insync.wrapper:Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n",
+      "ERROR:ib_insync.wrapper:Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n",
+      "ERROR:ib_insync.client:Peer closed connection\n",
+      "ERROR:ib_insync.client:Peer closed connection\n"
+     ]
+    }
+   ],
    "source": [
     "bars = ib.reqHistoricalData(\n",
     "        contract,\n",
